@@ -1,5 +1,12 @@
 === librsvg 2.2.2 ===
 
+2003-02-0   Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-paint-server.c: Fix evil devide by 0 bug that killed us on
+	some Krystal SVGs
+	* rsvg.c: update documentation - 95% complete (missing RsvgSizeFunc)
+	* rsvg-gz.c: Ditto
+	
 2003-02-01  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg.c (end_element): Fix regression
